uHexen2-specific changes:
-----------------------------

* read_meta_data(), api change: removed altogether. metadata is no
  longer stored in the song. text stuff are either skipped or printed
  to stderr if the library is compiled with TIMIDITY_DEBUG defined.

------------------------------------------------------------------------


Changes by libtimidity-0.2.5:
-----------------------------

* allow dual-licensing as LGPL / Artistic.


Changes by libtimidity-0.2.4:
-----------------------------

* fixes to the pkg-config file.


Changes by libtimidity-0.2.3:
-----------------------------

* fixed a potential buffer overrun in timi_fgets() which might have led
  to a crash during config parsing.


Changes by libtimidity-0.2.2:
-----------------------------

* removed DLS instruments support completely, it was never good enough:
  one less thing to worry about. and no, the 0.2.x api didn't change.


Changes by libtimidity-0.2.1:
-----------------------------

* new --with-timidty-cfg=FILE configury option to specify the full path
  of timidity.cfg.  the default is "timidity.cfg".  if building without
  configury and a config.h, you can always edit options.h to change the
  value of TIMITIDY_CFG macro.
* fixed 8 bit output in test programs (use U8 format, not S8), along
  with some other minor issues.
* fixed some minor portability issues.
* added project files and standalone makefiles for windows and mac os x.
* fixed copyright/license mistakes in some files, license clarification.
* added standalone makefiles for less common operating systems e.g. dos,
  os/2, morphos, aros, and amigaos.


Changes by libtimidity-0.2.0:
-----------------------------

* stream.c, api change: added mid_istream_seek and mid_istream_tell to
  the mid_istream_* api. added seek and tell funcs to the _MidIStream
  structure. mid_istream_open_callbacks() is changed now accepts these
  callbacks.

* stream.c, api change: mid_istream_open_mem() no longer accepts an