@@ -220,7 +220,7 @@ struct _MidEventList
 
 struct _MidSong
 {
-  int oom;/* malloc failed */
+  int oom; /* malloc() failed */
   int playing;
   sint32 rate;
   sint32 encoding;
@@ -229,7 +229,6 @@ struct _MidSong
   sint32 amplification;
   MidToneBank *tonebank[128];
   MidToneBank *drumset[128];
-  FILE *ifp; /* patch file pointer used by the instrument loader */
   MidInstrument *default_instrument;
   int default_program;
   void (*write) (void *dp, sint32 *lp, sint32 c);
